# ndarray

./: CMakeLists.txt  README.md
docs/: design.txt
include/: Broadcast.hpp  Creation.hpp  NdArray.hpp  Plot.hpp  Slice.hpp  Transform.hpp
test/: test_main.cpp  visualization.cpp
test_data/: readme.txt
